# ChangeLog for app-forensics/vine
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*vine-1.0 (16 Mar 2013)

  16 Mar 2013; Christoph Junghans <ottxor@gentoo.org>
  +files/vine-1.0-binutils.patch, +files/vine-1.0-gcc46.patch,
  +files/vine-1.0-install.patch, +files/vine-1.0-ocamlgraph182.patch,
  +metadata.xml, +vine-1.0.ebuild:
  initial commit