@@ -1,4 +1,4 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
@@ -21,7 +21,6 @@ DEPEND="
 	dev-ml/camlidl
 	>=dev-libs/gmetadom-0.2.6-r1[ocaml]
 	dev-ml/extlib
-	sys-devel/binutils
 	dev-ml/ocamlgraph"
 RDEPEND="${DEPEND}"
 
